[metadata]
name = pyDragonWarrior
version = 1.3.0
license = MIT
description = A Python based Dragon Warrior clone.
long_description = file: README.md
author = justinbeetle
classifiers =
    Intended Audience :: End Users/Desktop
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Games/Entertainment :: Role-Playing

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
where = src

[flake8]
max-line-length = 120
extend-ignore = E203